--- a/client/src/assets/editor/editor-dark.css
+++ b/client/src/assets/editor/editor-dark.css
@@ -27,14 +27,23 @@
     flex: auto;
     width: 100%;
     height: 100%;
+    cursor: text;
 }
 
 .line-number {
     border-right: 1px solid rgba(0,0,0,0.3);
     padding: 0 0.8rem;
+    cursor: context-menu;
+    user-select: none;
+    -webkit-user-select: none;
 }
 
 .uneditable {
     -webkit-user-select: none;
+    user-select: none;
     cursor: context-menu;
+}
+
+.tab {
+    white-space: pre;
 }
