--- a/client/src/assets/editor/editor-default.css
+++ b/client/src/assets/editor/editor-default.css
@@ -1,11 +1,10 @@
-///
 .editor {
     padding: 0.5rem 0.8rem;
     height: fit-content;
     width: 100%;
     background-color: rgb(255, 255, 255);
     border: none;
-    color: rgba(255, 255, 255, 0.959);
+    color: rgba(0, 0, 0, 0.959);
     counter-reset: line;
 }
 
@@ -18,7 +17,7 @@
     padding: 0.5rem 0;
     height: fit-content;
     background-color: rgb(255, 255, 255);
-    color: rgba(255, 255, 255, 0.959);
+    color: rgba(0, 0, 0, 0.959);
 }
 
 .editor-container {
@@ -28,14 +27,23 @@
     flex: auto;
     width: 100%;
     height: 100%;
+    cursor: text;
 }
 
 .line-number {
     border-right: 1px solid rgba(0,0,0,0.3);
     padding: 0 0.8rem;
+    cursor: context-menu;
+    user-select: none;
+    -webkit-user-select: none;
 }
 
 .uneditable {
     -webkit-user-select: none;
+    user-select: none;
     cursor: context-menu;
+}
+
+.tab {
+    white-space: pre;
 }
