--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -54,17 +54,17 @@ a:visited {
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #f1f1f1; 
+  background: #00000013; 
 }
  
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: rgb(138, 144, 151); 
+  background: rgba(0, 0, 0, 0.2); 
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #555; 
+  background: rgba(0, 0, 0, 0.4); 
 }
 
 html, body { height: 100%; }
